style: Apply Java 21 modernizations