@@ -126,7 +126,7 @@ public class ScimOAuth2SamlTests extends AbstractScimOAuth2SamlTests {
     private String captureScimAssertionXml(String tokenEndpoint) {
         var requests = wireMockServer.findAll(postRequestedFor(urlEqualTo(tokenEndpoint)));
         assertFalse(requests.isEmpty());
-        for (String param : requests.get(0).getBodyAsString().split("&")) {
+        for (String param : requests.getFirst().getBodyAsString().split("&")) {
             if (param.startsWith("assertion=")) {
                 String base64url = URLDecoder.decode(param.substring("assertion=".length()), StandardCharsets.UTF_8);
                 return decodeAssertion(base64url);
